--- a/rslang/src/app/features/pages/statistics/statistics.component.scss
+++ b/rslang/src/app/features/pages/statistics/statistics.component.scss
@@ -7,11 +7,27 @@
   gap: 2rem;
 }
 
+.wrapper-outer {
+  padding: 0;
+}
+
+.wrapper-charts {
+  padding: 0 2rem 2rem;
+  max-width: 1400px;
+  margin: 0 auto;
+}
+
 .mat-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.mat-card-base {
   width: 410px;
   height: 230px;
   flex-shrink: 1;
-  max-width: 60%;
+  max-width: 64%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -20,6 +36,14 @@
 .chart-card {
   width: auto;
   height: auto;
+  flex-grow: 2;
+  max-width: 50%;
+}
+
+@media (max-width: 900px) {
+  .chart-card {
+    max-width: 90%;
+  }
 }
 
 .mat-card-title {
@@ -31,14 +55,16 @@
 .button__icon{
   font-size: 16rem;
   text-align: center;
-  width:100%;
+  width: 100%;
 }
 
 .mat-card .mat-card-content {
   color: white;
   align-items: center;
   margin: auto;
+  display: flex;
 }
+
 
 lord-icon{
   width:80%;
@@ -53,6 +79,22 @@ lord-icon{
   color: white;
 }
 
+.charts-wrapper {
+  display: flex;
+  flex-flow: row wrap;
+  width: 100%;
+}
+
+.mat-card .chart-content {
+  display: flex;
+  flex-flow: row wrap;
+  width: 100%;
+}
+
 .chart {
-  max-width: 70%;
+  flex: 2 0 100%;
+  background: white;
+  border-radius: 4px;
+  min-width: 200px;
+  max-width: 100%;
 }
