fix: fix statistic template

--- a/rslang/src/app/features/pages/statistics/statistics.component.scss
+++ b/rslang/src/app/features/pages/statistics/statistics.component.scss
@@ -58,6 +58,11 @@
   width: 100%;
 }
 
+.login-icon {
+  max-width: 400px;
+  margin: 0, auto;
+}
+
 .mat-card .mat-card-content {
   color: white;
   align-items: center;
