--- a/rslang/src/app/features/pages/statistics/statistics.component.scss
+++ b/rslang/src/app/features/pages/statistics/statistics.component.scss
@@ -102,3 +102,12 @@ lord-icon{
   min-width: 200px;
   max-width: 100%;
 }
+
+.mat-card-title {
+  display: flex;
+  align-items: center;
+}
+
+.mat-card-title .mat-icon {
+    margin-right: 1rem;
+  }
