--- a/rslang/src/app/features/pages/learnbook/learnbook.component.html
+++ b/rslang/src/app/features/pages/learnbook/learnbook.component.html
@@ -26,7 +26,7 @@
     <ul class="words-list" *ngIf="currentPageNum">
       <li class="words-list-item"
           *ngFor="let wordData of wordsData">
-        <app-word [wordData]="wordData"></app-word>
+        <app-word [wordData]="wordData" (onClickAudio)="playWordAudio($event)"></app-word>
       </li>
     </ul>
     <ul class="group-pages-list" *ngIf="currentGroupNum <= learnbookGroupCount">
