--- a/rslang/src/app/features/pages/learnbook/word/word.component.html
+++ b/rslang/src/app/features/pages/learnbook/word/word.component.html
@@ -19,5 +19,19 @@
       <li class="word-card-content-list-item" (mouseenter)="showExample()" (mouseleave)="hideText()">Пример</li>
     </ul>
     <p class="word-card-content-text" *ngIf="isMeaningShow || isExampleShow" [innerHTML]="wordCardContentText"></p>
+    <div class="word-card-buttons-container">
+      <button class="word-card-button" mat-icon-button color="primary" (click)="addUserWord()">
+        <mat-icon class="word-card-button-icon" *ngIf="isKnown; else uncheckedBox">check_box</mat-icon>
+        <ng-template #uncheckedBox>
+          <mat-icon class="word-card-button-icon">check_box_outline_blank</mat-icon>
+        </ng-template>
+      </button>
+      <button class="word-card-button" mat-icon-button color="primary">
+        <mat-icon class="word-card-button-icon" *ngIf="isHard; else easyWord">star</mat-icon>
+        <ng-template #easyWord>
+          <mat-icon class="word-card-button-icon">star_border</mat-icon>
+        </ng-template>
+      </button>
+    </div>
   </mat-card-content>
 </mat-card>
