--- a/rslang/src/app/features/pages/learnbook/word/word.component.scss
+++ b/rslang/src/app/features/pages/learnbook/word/word.component.scss
@@ -1,3 +1,7 @@
+.word-card-studied {
+  background-color: rgba(179, 135, 255, 0.6);
+}
+
 .word-card {
   width: 19vw;
 
@@ -38,7 +42,7 @@
       display: flex;
       flex-direction: row;
       column-gap: 1vh;
-      font-size: 0.6rem;
+      font-size: 1rem;
 
       cursor: pointer;      
       user-select: none;
@@ -62,9 +66,8 @@
       position: absolute;
       left: 0;
       bottom: 0;
-      background-color: rgb(150, 150, 150);
-      border: 2px dashed rgba(122, 122, 122);
       border-radius: 4px;
+      border: 1px solid #000000;
       transform: translateY(calc(100% - 10px));
       z-index: 1;
     }
