--- a/rslang/src/app/features/pages/learnbook/word/word.component.scss
+++ b/rslang/src/app/features/pages/learnbook/word/word.component.scss
@@ -1,7 +1,3 @@
-.word-card-studied {
-  background-color: rgba(179, 135, 255, 0.6);
-}
-
 .word-card {
   width: 19vw;
 
@@ -11,6 +7,7 @@
     .mat-card-title {
       display: flex;
       flex-direction: row;
+      font-size: 2rem;
     
       .word-card-content-audio {
         margin-top: -10px;
@@ -19,17 +16,31 @@
 
     .mat-card-subtitle {
       margin-bottom: 0;
+      font-size: 1.4rem;
     }
   
     .word-card-image-container {
+      position: relative;
       margin-left: 1vw;
-      width: 5vw;
-      height: 5vw;
+      width: 10rem;
+      height: 10rem;
       display: flex;
       flex-direction: row;
       justify-content: center;
       flex-shrink: 0;
       overflow: hidden;
+
+      .word-card-chart-icon {
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        opacity: 0.6;
+        cursor: pointer;
+      
+        &:hover {
+          opacity: 1;
+        }
+      }
     }
   }
 
@@ -37,6 +48,12 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+
+    .word-card-chart-icon {
+      position: absolute;
+      right: 0;
+      top: 0;
+    }
 
     .word-card-content-list {
       display: flex;
@@ -59,6 +76,10 @@
       }
     }
 
+    .word-card-button-icon {
+      cursor: pointer;
+    }
+
     .word-card-content-text {
       margin: 0 5%;
       padding: 16px;
@@ -66,10 +87,67 @@
       position: absolute;
       left: 0;
       bottom: 0;
+      font-size: 1.4rem;
       border-radius: 4px;
-      border: 1px solid #000000;
       transform: translateY(calc(100% - 10px));
       z-index: 1;
     }
+
+    .stats-container {
+      width: 60%;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      position: absolute;
+      top: 0;
+      left: 0;
+      border-radius: 4px;
+      opacity: 0;
+      pointer-events: none;
+      transition: 0.5s ease;
+
+      &.stats-active {
+        opacity: 1;
+        pointer-events: auto;
+        transition: 0.5s ease;
+      }
+
+      .stats-row {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        height: 45%;
+
+        .stats-cell {
+          justify-self: center;
+          align-self: center;
+          text-align: center;
+          flex-basis: 45%;
+        }
+
+        .correct-answer-icon {
+          color: #36D96F;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 1450px) {
+  .word-card {
+    width: 25vw;
+  }
+}
+
+@media (max-width: 850px) {
+  .word-card {
+    width: 35vw;
+  }
+}
+
+@media (max-width: 600px) {
+  .word-card {
+    width: 60vw;
   }
 }
