--- a/rslang/src/styles.scss
+++ b/rslang/src/styles.scss
@@ -67,6 +67,9 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .text-primary{
   color: mat-color($rslang-primary);
 }
+.text-accent{
+  color: mat-color($rslang-accent);
+}
 .transparent-background{
   background:#ffffff8f;
 
@@ -82,6 +85,9 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     background-color: mat-color($rslang-accent-dark);
   }
   .text-primary{
+    color: mat-color($rslang-primary-dark);
+  }
+  .text-accent{
     color: mat-color($rslang-accent-dark);
   }
   .transparent-background{
