--- a/rslang/src/app/features/pages/about-team/about-team.component.html
+++ b/rslang/src/app/features/pages/about-team/about-team.component.html
@@ -5,114 +5,89 @@
     Болтались по свету, земле и воде
   </p>
   <mat-card class="member transparent-background mat-elevation-z8">
-    <mat-card-title class="member__title background-primary"
-      >Павел Алешкин<br>
-      <a
-      href="https://github.com/aleshkinpaul"
-      class="member__link"
-      ><mat-icon>link</mat-icon><span class="member__link-name">aleshkinpaul</span></a
-    ></mat-card-title
-    >
+    <mat-card-title class="member__title background-primary">Павел Алешкин<br>
+      <a href="https://github.com/aleshkinpaul" class="member__link">
+        <mat-icon>link</mat-icon><span class="member__link-name">aleshkinpaul</span>
+      </a>
+    </mat-card-title>
     <mat-card-content class="member__content">
       <div class="member__image-wrapper">
-        <img
-          alt="member__avatar"
-          src="./../../../../assets/images/pasha_avatar.png"
-        />
+        <img alt="member__avatar" src="./../../../../assets/images/pasha_avatar.png" />
       </div>
       <div class="member__description">
 
-        <mat-card-subtitle class="member__subtitle text-primary"
-          >Не выдвигался на Оскар, НО:</mat-card-subtitle
-        >
+        <mat-card-subtitle class="member__subtitle text-primary">Не выдвигался на Оскар, НО:</mat-card-subtitle>
         <ul class="member__list">
-          <li class="member__list-item"><mat-icon color="accent">task_alt</mat-icon>Являюсь тимлидом проекта</li>
-          <li class="member__list-item"><mat-icon color="accent">task_alt</mat-icon>Разработал архитектуру приложения</li>
-          <li class="member__list-item"><mat-icon color="accent">task_alt</mat-icon>Создал учебник и карточки слов</li>
+          <li class="member__list-item">
+            <mat-icon color="accent">task_alt</mat-icon>Являюсь тимлидом проекта
+          </li>
+          <li class="member__list-item">
+            <mat-icon color="accent">task_alt</mat-icon>Разработал архитектуру приложения
+          </li>
+          <li class="member__list-item">
+            <mat-icon color="accent">task_alt</mat-icon>Создал учебник и карточки слов
+          </li>
         </ul>
       </div>
     </mat-card-content>
   </mat-card>
 
-    <mat-card class="member transparent-background mat-elevation-z8">
-      <mat-card-title class="member__title background-primary "
-        >Владимир Бессонов<br>
-        <a
-        href="https://github.com/unbiz"
-        class="member__link"
-        ><mat-icon>link</mat-icon><span class="member__link-name">unbiz</span></a
-      ></mat-card-title
-      >
-      <mat-card-content class="member__content">
-        <div class="member__image-wrapper">
-          <img
-            alt="member__avatar"
-            src="./../../../../assets/images/vova_avatar.png"
-          />
-        </div>
-        <div class="member__description">
+  <mat-card class="member transparent-background mat-elevation-z8">
+    <mat-card-title class="member__title background-primary ">Владимир Бессонов<br>
+      <a href="https://github.com/unbiz" class="member__link">
+        <mat-icon>link</mat-icon><span class="member__link-name">unbiz</span>
+      </a>
+    </mat-card-title>
+    <mat-card-content class="member__content">
+      <div class="member__image-wrapper">
+        <img alt="member__avatar" src="./../../../../assets/images/vova_avatar.png" />
+      </div>
+      <div class="member__description">
 
-          <mat-card-subtitle class="member__subtitle text-primary "
-            >Французам не забивал, НО:</mat-card-subtitle
-          >
-          <ul class="member__list">
-            <li class="member__list-item"><mat-icon color="accent">task_alt</mat-icon>Настроил работу с сервером</li>
-            <li class="member__list-item"><mat-icon color="accent">task_alt</mat-icon>Создал игру "Спринт"</li>
-            <li class="member__list-item"><mat-icon color="accent">task_alt</mat-icon>Разработал компоненты авторизации и статистики</li>
-          </ul>
-        </div>
-      </mat-card-content>
-    </mat-card>
-    <mat-card class="member transparent-background mat-elevation-z8">
-      <mat-card-title class="member__title background-primary"
-        >Инга Баранец<br>
-        <a
-        href="https://github.com/rubiaqute"
-        class="member__link"
-        ><mat-icon>link</mat-icon><span class="member__link-name">rubiaqute</span></a
-      ></mat-card-title
-      >
-      <mat-card-content class="member__content">
-        <div class="member__image-wrapper">
-          <img
-            alt="member__avatar"
-            src="./../../../../assets/images/inga_avatar.png"
-          />
-        </div>
-        <div class="member__description">
+        <mat-card-subtitle class="member__subtitle text-primary ">Французам не забивал, НО:</mat-card-subtitle>
+        <ul class="member__list">
+          <li class="member__list-item">
+            <mat-icon color="accent">task_alt</mat-icon>Настроил работу с сервером
+          </li>
+          <li class="member__list-item">
+            <mat-icon color="accent">task_alt</mat-icon>Создал игру "Спринт"
+          </li>
+          <li class="member__list-item">
+            <mat-icon color="accent">task_alt</mat-icon>Разработал компоненты авторизации и статистики
+          </li>
+        </ul>
+      </div>
+    </mat-card-content>
+  </mat-card>
+  <mat-card class="member transparent-background mat-elevation-z8">
+    <mat-card-title class="member__title background-primary">Инга Баранец<br>
+      <a href="https://github.com/rubiaqute" class="member__link">
+        <mat-icon>link</mat-icon><span class="member__link-name">rubiaqute</span>
+      </a>
+    </mat-card-title>
+    <mat-card-content class="member__content">
+      <div class="member__image-wrapper">
+        <img alt="member__avatar" src="./../../../../assets/images/inga_avatar.png" />
+      </div>
+      <div class="member__description">
 
-          <mat-card-subtitle class="member__subtitle text-primary"
-            >Моим именем не назван город на карте, НО:</mat-card-subtitle
-          >
-          <ul class="member__list">
-            <li class="member__list-item"><mat-icon color="accent">task_alt</mat-icon>Разработала игру "Аудиовызов"</li>
-            <li class="member__list-item"><mat-icon color="accent">task_alt</mat-icon>
-              Создала компоненты главной страницы, меню и
-              страницы о команде
-            </li>
-            <li class="member__list-item"><mat-icon color="accent">task_alt</mat-icon>Настроила анимацию и звуковое сопровождение</li>
-          </ul>
-        </div>
-      </mat-card-content>
-    </mat-card>
+        <mat-card-subtitle class="member__subtitle text-primary">Моим именем не назван город на карте, НО:
+        </mat-card-subtitle>
+        <ul class="member__list">
+          <li class="member__list-item">
+            <mat-icon color="accent">task_alt</mat-icon>Разработала игру "Аудиовызов"
+          </li>
+          <li class="member__list-item">
+            <mat-icon color="accent">task_alt</mat-icon>
+            Создала компоненты главной страницы, меню и
+            страницы о команде
+          </li>
+          <li class="member__list-item">
+            <mat-icon color="accent">task_alt</mat-icon>Настроила анимацию и звуковое сопровождение
+          </li>
+        </ul>
+      </div>
+    </mat-card-content>
+  </mat-card>
 
 </div>
-
-<!--
-<div *ngIf="auth.loginError$ | async as error">{{error}}</div>
-<div *ngIf="auth.updateLoginError$ | async as error">{{error}}</div>
-<button (click)="onClickGetWordsButton()">getWords</button>
-<button (click)="onClickGetWordButton()">getWord</button>
-<button (click)="onClickCreateNewUserButton()">createNewUser</button>
-<button [disabled]="!auth.isAuthenticated" (click)="onClickGetUserButton()">getUser</button>
-<button (click)="onClickLoginButton()">Login</button>
-<button (click)="onClickLogoutButton()">Logout</button>
-<button (click)="onClickUpdateUserButton()">UpdateUser</button>
-<button (click)="onClickDeleteUserButton()">DeleteUser</button>
-<button (click)="onClickGetNewTokenButton()">GetNewToken</button>
-<button (click)="onClickGetAllUserWordsButton()">GetAllUserWords</button>
-<button (click)="onClickUpsertButton()">Upsert</button>
-<button (click)="onClickGetUpsertButton()">GetUpsert</button>
-<button (click)="onClickCreateUserWordButton()">CreateUserWord</button>
-<app-button-accent (click)="startAudioChallenge()" [title]="'Запустить аудиовызов(стр 15, разд 0)'"></app-button-accent>
-<app-button-accent (click)="startSprint()" [title]="'Запустить спринт(стр 9, разд 4)'"></app-button-accent> -->
