refactor: main page styles

--- a/rslang/src/app/features/pages/about-team/about-team.component.html
+++ b/rslang/src/app/features/pages/about-team/about-team.component.html
@@ -12,7 +12,7 @@
     </mat-card-title>
     <mat-card-content class="member__content">
       <div class="member__image-wrapper">
-        <img alt="member__avatar" src="./../../../../assets/images/pasha_avatar.png" />
+        <img alt="member__avatar" src="./assets/images/pasha_avatar.png" />
       </div>
       <div class="member__description">
 
@@ -40,7 +40,7 @@
     </mat-card-title>
     <mat-card-content class="member__content">
       <div class="member__image-wrapper">
-        <img alt="member__avatar" src="./../../../../assets/images/vova_avatar.png" />
+        <img alt="member__avatar" src="./assets/images/vova_avatar.png" />
       </div>
       <div class="member__description">
 
@@ -67,7 +67,7 @@
     </mat-card-title>
     <mat-card-content class="member__content">
       <div class="member__image-wrapper">
-        <img alt="member__avatar" src="./../../../../assets/images/inga_avatar.png" />
+        <img alt="member__avatar" src="./assets/images/inga_avatar.png" />
       </div>
       <div class="member__description">
 
