--- a/rslang/src/app/features/pages/about-team/about-team.component.scss
+++ b/rslang/src/app/features/pages/about-team/about-team.component.scss
@@ -16,9 +16,13 @@ button {
 .epigraf {
   font-style: italic;
   font-weight: bold;
+  max-width: 1000px;
+  margin: 0 auto 30px;
+
 }
 .member {
-  margin-bottom: 2%;
+  max-width: 1000px;
+  margin: 0 auto 20px;
   .member__title {
     padding: 1% 5%;
     color: white;
@@ -28,12 +32,19 @@ button {
   .member__content {
     display: flex;
     justify-content: space-between;
+    align-items: flex-start;
   }
+
+
   .member__image-wrapper {
-    width: 20%;
+    width: 40%;
+    max-width: 170px;
+    margin-right: 30px;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    border-radius: 4px;
+    overflow: hidden;
     img {
       width: 100%;
       object-fit: contain;
@@ -41,12 +52,18 @@ button {
   }
   .member__list{
     list-style-type: none;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+
     .member__list-item{
       display: flex;
       align-items: center;
-      gap:1%;
+      gap:10px;
+      align-items: flex-start;
     }
   }
+
 
   .member__link {
     text-decoration: none;
@@ -75,4 +92,26 @@ button {
       font-style: italic;
     }
   }
+
+  @media (max-width: 450px) {
+    .member__content {
+      flex-direction: column;
+      align-items: center;
+      width: 100%;
+    }
+
+    .member__image-wrapper {
+      margin-right: 0;
+      margin-bottom: 20px;
+    }
+
+    .member__description{
+      width: 80%;
+    }
+
+    .member__description .member__subtitle {
+      font-size: 14px;
+    }
+  }
 }
+
