--- a/rslang/src/app/features/pages/main-page/main-page.component.scss
+++ b/rslang/src/app/features/pages/main-page/main-page.component.scss
@@ -1,6 +1,7 @@
 @import './../../../styles/mixins.scss';
 .example-stretched-tabs {
   width: 100%;
+  box-shadow: none;
 }
 lord-icon{
   width:80%;
@@ -14,6 +15,7 @@ lord-icon{
   font-style: italic;
   font-weight: bold;
 }
+
 .cards {
   width: 95%;
   gap: 10%;
@@ -26,8 +28,8 @@ lord-icon{
 font-size: 2rem;
 }
 .card__video, .card__wrapper{
-width: 50rem;
-height:28.2rem;
+width: 46rem;
+height:25.6rem;
 margin:auto;
 }
 .card__wrapper{
@@ -36,13 +38,18 @@ margin:auto;
   justify-content: space-around;
   text-align: center;
 }
+
+
 .card {
   padding: 2% 2%;
-  width: 100%;
+  width: 86%;
+  max-width: 1000px;
+  margin: 5rem auto;
   border-radius: 4px;
   transition: 0.3s ease-in-out;
   display: flex;
   justify-content: space-between;
+  background-color: rgba($color: #fff, $alpha: 0.8);
 
   .card__description {
     display: flex;
@@ -61,11 +68,18 @@ margin:auto;
     text-align: center;
   }
   .card__button {
-    width: 30%;
-    padding:0 0;
+    width: 40%;
+    padding:0 10px;
     margin: 0 auto;
-    font-size: 1.3rem;
+    font-size: 1.6rem;
     text-align: center;
+  }
+
+  @media (max-width: 420px) {
+    .card__button {
+      font-size: 2rem;
+      width: 50%;
+    }
   }
 
   h2 {
